[Confirmation test] CI working with Heroku and Shippable
(https://github.com/vladislavivanistsev/SuperCap/issues/46)

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-app="VirtualBook">
     <div class="container">
-        <h1>SuperCap</h1>
+        <h1>SuperCap Development</h1>
         <div ng-view></div>
     </div>
 </body>
