--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
     <script type="text/javascript" src="/js/app.js"></script>
-    <script type="text/javascript" src="/js/controllers/book-ctrl.js"></script>
-    <script type="text/javascript" src="/js/services/book-service.js"></script>
+    <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>
+    <script type="text/javascript" src="/js/services/data-service.js"></script>
 </head>
-<body ng-app="VirtualBook">
+<body ng-app="SuperCap">
     <div class="container">
-        <h1>SuperCap!</h1>
         <div ng-view></div>
     </div>
 </body>
