--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,29 @@
-<!doctype html>
-<html>
-<head>
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
-    <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>
-    <script type="text/javascript" src="/js/services/data-service.js"></script>
-</head>
-<body ng-app="SuperCap">
-    <div class="container">
-        <div ng-view></div>
-    </div>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>SuperCap</title>
+
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"/>
+        <link type="text/css" rel="stylesheet" href="css/styles.css"/>
+
+    </head>
+    <body ng-app="SuperCap">
+        <div class="container">
+            <div ng-view></div>
+        </div>
+
+        <script type="text/javascript" src="js/libs/jquery-1.11.2.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
+        <script type="text/javascript" src="js/libs/materialize.min.js"></script>
+        <script type="text/javascript" src="js/libs/chart.min.js"></script>
+        <script type="text/javascript" src="js/libs/chartController.js"></script>
+
+        <script type="text/javascript" src="/js/app.js"></script>
+        <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>
+        <script type="text/javascript" src="/js/services/data-service.js"></script>
+
+    </body>
 </html>
