--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,18 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
         <link type="text/css" rel="stylesheet" href="css/styles.css"/>
+
 
     </head>
     <body ng-app="SuperCap">
-        <div class="container">
-            <div ng-view></div>
-        </div>
+        <div ng-view></div>
 
         <script type="text/javascript" src="js/libs/jquery-1.11.2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
-        <script type="text/javascript" src="js/libs/materialize.min.js"></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/libs/chart.min.js"></script>
         <script type="text/javascript" src="js/libs/chartController.js"></script>
 
