--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,11 @@
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/libs/chart.min.js"></script>
         <script type="text/javascript" src="js/libs/chartController.js"></script>
+        <script type="text/javascript" src="js/libs/Three49custom.js"></script>
+        <script type="text/javascript" src="js/libs/GLmol.js"></script>
 
         <script type="text/javascript" src="/js/app.js"></script>
-        <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>
+        <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>      
         <script type="text/javascript" src="/js/services/data-service.js"></script>
 
     </body>
