--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="js/libs/GLmol.js"></script>
 
         <script type="text/javascript" src="/js/app.js"></script>
+        <script type="text/javascript" src="js/controllers/calculations.js"></script>
         <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>      
         <script type="text/javascript" src="/js/services/data-service.js"></script>
 
