#58, #72 - Implemented adding new input sets and switching between input sets on the sidebar.

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="js/controllers/calculations.js"></script>
+        <script type="text/javascript" src="js/controllers/models.js"></script>
         <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>      
         <script type="text/javascript" src="/js/services/data-service.js"></script>
 
