--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,15 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/libs/d3.min.js"></script>
-        <script type="text/javascript" src="js/libs/line-chart.min.js"></script>
-        <script type="text/javascript" src="js/libs/chartController.js"></script>
-        <script type="text/javascript" src="js/libs/Three49custom.js"></script>
-        <script type="text/javascript" src="js/libs/GLmol.js"></script>
+        <script type="text/javascript" src="/js/libs/d3.min.js"></script>
+        <script type="text/javascript" src="/js/libs/line-chart.min.js"></script>
+        <script type="text/javascript" src="/js/libs/Three49custom.js"></script>
+        <script type="text/javascript" src="/js/libs/GLmol.js"></script>
 
         <script type="text/javascript" src="/js/app.js"></script>
-        <script type="text/javascript" src="js/controllers/calculations.js"></script>
-        <script type="text/javascript" src="js/controllers/models.js"></script>
+        <script type="text/javascript" src="/js/controllers/chart.js"></script>
+        <script type="text/javascript" src="/js/controllers/calculations.js"></script>
+        <script type="text/javascript" src="/js/controllers/models.js"></script>
         <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>      
         <script type="text/javascript" src="/js/services/data-service.js"></script>
 
