--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         <script type="text/javascript" src="/js/libs/line-chart.min.js"></script>
         <script type="text/javascript" src="/js/libs/Three49custom.js"></script>
         <script type="text/javascript" src="/js/libs/GLmol.js"></script>
+        <script type="text/javascript" src="/js/libs/html2canvas.js"></script>
 
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="/js/controllers/chart.js"></script>
