CAS-number fully functional.
(https://github.com/vladislavivanistsev/SuperCap/issues/47)

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         <script type="text/javascript" src="/js/controllers/chart.js"></script>
         <script type="text/javascript" src="/js/controllers/calculations.js"></script>
         <script type="text/javascript" src="/js/controllers/models.js"></script>
+        <script type="text/javascript" src="/js/directives/casinput.js"></script>
         <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>      
         <script type="text/javascript" src="/js/services/data-service.js"></script>
 
