--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="/js/libs/Three49custom.js"></script>
         <script type="text/javascript" src="/js/libs/GLmol.js"></script>
         <script type="text/javascript" src="/js/libs/html2canvas.js"></script>
+        <script type="text/javascript" src="/js/libs/Math.js"></script>
         <script src="/js/libs/ui-bootstrap-tpls-0.11.0.js"></script>
 
         <script type="text/javascript" src="/js/app.js"></script>
