--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
         <script type="text/javascript" src="/js/libs/html2canvas.js"></script>
         <script type="text/javascript" src="/js/libs/Math.js"></script>
         <script type="text/javascript" src="/js/libs/Blob.js"></script>
-        <script type="text/javascript" src="/js/libs/jszip.min.js"></script>
-        <script type="text/javascript" src="/js/libs/FileSaver.min.js"></script>
+        <script type="text/javascript" src="/js/libs/FileSaver.js"></script>
         <script src="/js/libs/ui-bootstrap-tpls-0.11.0.js"></script>
 
         <script type="text/javascript" src="/js/app.js"></script>
