--- a/public/index.html
+++ b/public/index.html
@@ -18,23 +18,23 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/js/libs/d3.min.js"></script>
-        <script type="text/javascript" src="/js/libs/line-chart.min.js"></script>
-        <script type="text/javascript" src="/js/libs/Three49custom.js"></script>
-        <script type="text/javascript" src="/js/libs/GLmol.js"></script>
-        <script type="text/javascript" src="/js/libs/html2canvas.js"></script>
-        <script type="text/javascript" src="/js/libs/Math.js"></script>
-        <script type="text/javascript" src="/js/libs/Blob.js"></script>
-        <script type="text/javascript" src="/js/libs/FileSaver.js"></script>
-        <script src="/js/libs/ui-bootstrap-tpls-0.11.0.js"></script>
+        <script type="text/javascript" src="js/libs/d3.min.js"></script>
+        <script type="text/javascript" src="js/libs/line-chart.min.js"></script>
+        <script type="text/javascript" src="js/libs/Three49custom.js"></script>
+        <script type="text/javascript" src="js/libs/GLmol.js"></script>
+        <script type="text/javascript" src="js/libs/html2canvas.js"></script>
+        <script type="text/javascript" src="js/libs/Math.js"></script>
+        <script type="text/javascript" src="js/libs/Blob.js"></script>
+        <script type="text/javascript" src="js/libs/FileSaver.js"></script>
+        <script src="js/libs/ui-bootstrap-tpls-0.11.0.js"></script>
 
-        <script type="text/javascript" src="/js/app.js"></script>
-        <script type="text/javascript" src="/js/controllers/chart.js"></script>
-        <script type="text/javascript" src="/js/controllers/calculations.js"></script>
-        <script type="text/javascript" src="/js/controllers/models.js"></script>
-        <script type="text/javascript" src="/js/directives/casinput.js"></script>
-        <script type="text/javascript" src="/js/controllers/data-ctrl.js"></script>      
-        <script type="text/javascript" src="/js/services/data-service.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/controllers/chart.js"></script>
+        <script type="text/javascript" src="js/controllers/calculations.js"></script>
+        <script type="text/javascript" src="js/controllers/models.js"></script>
+        <script type="text/javascript" src="js/directives/casinput.js"></script>
+        <script type="text/javascript" src="js/controllers/data-ctrl.js"></script>
+        <script type="text/javascript" src="js/services/data-service.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.6/js/bootstrap-dialog.min.js"></script>
 
     </body>
